Add the ability to create new users

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -10,7 +10,7 @@
     <label>Password:<input type="password" [(ngModel)]="pass"></label>
     <div class = "button-block">
     <button (click) = "login()">Login</button>
-    <button>Registration</button>
+    <button (click) = "registerNewUser()" >Registration</button>
     </div>
     <div>
       <p whitespase = 'pre'>
