Add participants list to event edit form

--- a/src/app/day-shedule/edit-event-form/edit-event-form.component.html
+++ b/src/app/day-shedule/edit-event-form/edit-event-form.component.html
@@ -44,6 +44,13 @@
       required>
       </textarea>
     </label>
+
+    <div class="tooked-part-users-list">
+      <h2>Invented users</h2>
+      <ul class="invented-users-list">
+        <li *ngFor = "let item of invitedUsers">{{item.name}} ({{item.email}})</li>
+      </ul>
+    </div>
     
     <h3>Priority</h3>
     <div class = "priority-radiobuttons">
