--- a/src/app/day-shedule/add-event-form/add-event-form.component.html
+++ b/src/app/day-shedule/add-event-form/add-event-form.component.html
@@ -43,6 +43,13 @@
     required>
     </textarea>
   </label>
+
+  <div class="tooked-part-users-list">
+    <h2>Invented users</h2>
+    <ul class="invented-users-list">
+      <li></li>
+    </ul>
+  </div>
   
   <h3>Priority</h3>
   <div class = "priority-radiobuttons">
