Add posability to invent other users to event for new events

--- a/src/app/day-shedule/edit-event-form/edit-event-form.component.html
+++ b/src/app/day-shedule/edit-event-form/edit-event-form.component.html
@@ -47,8 +47,8 @@
 
     <div class="tooked-part-users-list">
       <h2>Invented users</h2>
-      <ul class="invented-users-list">
-        <li *ngFor = "let item of invitedUsers">{{item.name}} ({{item.email}})</li>
+      <ul class="percipitians-list">
+      <li style="list-style: none;" *ngFor = "let item of invitedUsers">{{item.name}} ({{item.email}})</li>
       </ul>
     </div>
     
