--- a/src/app/day-shedule/add-event-form/add-event-form.component.html
+++ b/src/app/day-shedule/add-event-form/add-event-form.component.html
@@ -47,9 +47,19 @@
   <div class="tooked-part-users-list">
     <h2>Invented users</h2>
     <ul class="invented-users-list">
-      <li></li>
+      <li *ngFor = "let item of iventedUsers; index as i">{{item.name}} ({{item.email}})<button class="delete-button" (click) = "preDeleteUser(item)">X</button></li>
     </ul>
   </div>
+
+  <form action="formdata" method="post" name="participants-list">
+    <h2>Select participants</h2>
+    <p>
+    <select name="list1" multiple>
+         <option *ngFor="let item of registratedUsers; index as i" (click) = "preAdd(i)">{{item.name}} ({{item.email}})</option>
+    </select></p>
+    <button (click)="sendInventedUsers()">Send</button>
+  </form>
+   
   
   <h3>Priority</h3>
   <div class = "priority-radiobuttons">
