Add common events-list

--- a/src/app/day-shedule/edit-event-form/edit-event-form.component.css
+++ b/src/app/day-shedule/edit-event-form/edit-event-form.component.css
@@ -1,102 +1,1 @@
-.form-group{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width:400px;
-    position:relative;
-    background-color: #bbded6;
-    font-family: 'Roboto', Arial, sans-serif;
-    color: #616161;
-    box-shadow: 2px 2px 2px 2px #616161;
-    margin-left: auto;
-    margin-right: auto;
-  
-  }
-  
-  label{
-    width:70%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-    font-size:20px;
-  }
-  
-  input{
-    width:35%;
-  }
-  
-  input.title, textarea{
-    width: 60%;
-  }
-  
-  .priority-radiobuttons{
-    display: flex;
-  }
-  
-  .priority-radiobuttons label{
-    margin:0px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .uncorrect{
-    background-color: #ffa5a9;
-    animation-duration: 0.5s;
-    animation-name: fade;
-  }
-  
-  @keyframes fade{
-    from{
-      background-color: white;
-    }
-    to{
-      background-color: #ffa5a9;
-    }
-  }
-  
-  button{
-    margin:20px;
-  }
-  
-  .addMessage{
-    display:none;
-    justify-content: center;
-    align-items: center;
-    position:absolute;
-    height:100%;
-    width:100%;
-    background-color: rgba(255,255,255,0.7);
-      
-  }
-  
-  .addMessage p{
-    top:50%;
-    left: 50%;
-  }
-  
-  .show{
-    display:flex;
-    animation-duration: 1s, 1s;
-    animation-name: fadeIn, fadeOut;
-    animation-delay: 0s, 1s;
-  }
-  
-  
-  @keyframes fadeIn{
-   0%{
-     opacity: 0;
-   }
-   100%{
-     opacity: 1;
-   }
-  }
-  
-  @keyframes fadeOut{
-   0%{
-     opacity: 1;
-   }
-   100%{
-     opacity: 0;
-   }
-  }
+/* No CSS *//*# sourceMappingURL=edit-event-form.component.css.map */
