Update main event-list and add date separating

--- a/src/app/day-shedule/events-list/events-list.component.scss
+++ b/src/app/day-shedule/events-list/events-list.component.scss
@@ -2,8 +2,9 @@
     border: 1px solid #616161;
     display: flex;
     justify-content: space-around;
+    .title{
+        width: 25%;
+        outline: 1px solid blue;
+    }
 }
 
-.single-event{
-    margin-top: 5px;
-}
