--- a/src/app/day-shedule/events-list/events-list.component.css
+++ b/src/app/day-shedule/events-list/events-list.component.css
@@ -7,7 +7,8 @@
       justify-content: space-around;
 }
 
-.single-event {
-  margin-top: 5px;
+.event-table-header .title {
+  width: 25%;
+  outline: 1px solid blue;
 }
 /*# sourceMappingURL=events-list.component.css.map */
