--- a/src/app/day-shedule/events-list/events-list.component.html
+++ b/src/app/day-shedule/events-list/events-list.component.html
@@ -1,11 +1,11 @@
 <div class = "events-list" >
 
 <div class = "event-table-header">
-    <p class="time-from-title">Time From</p>
-    <p class= "time-to-title">Time To</p>
-    <p class= "time-to-title">Title</p>
-    <p class= "delete-button"></p>
-    <p class= "edit-button"></p>
+    <p class="time-from-title title">Time From</p>
+    <p class= "time-to-title title">Time To</p>
+    <p class= "time-to-title title">Title</p>
+    <p class= "delete-edit-title title"></p>
+    
 </div>
    
 <div class = "single-event" *ngFor = "let item of eventsDataBase" >
