--- a/src/app/day-shedule/single-event/single-event.component.css
+++ b/src/app/day-shedule/single-event/single-event.component.css
@@ -2,16 +2,44 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   border: 1px solid #616161;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  height: 40px;
+  margin-top: 5px;
 }
 
-.single-event button {
-  width: 80px;
+.single-event .title {
+  margin: auto 0px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.single-event .single-event__time-from-title {
+  width: 25%;
+}
+
+.single-event .single-event__time-to-title {
+  width: 25%;
+}
+
+.single-event .single-event__event-title-title {
+  width: 25%;
+}
+
+.single-event .single-event-button-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 25%;
+}
+
+.single-event .button {
+  width: 50%;
+  margin: 5px;
+  padding-left: auto;
 }
 
 .high {
