--- a/src/app/day-shedule/single-event/single-event.component.scss
+++ b/src/app/day-shedule/single-event/single-event.component.scss
@@ -1,11 +1,36 @@
 .single-event{
     display:flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     border: 1px solid #616161;
-    flex: 1;
-    button{
-      width:80px;
+    height: 40px;
+    margin-top: 5px;
+    .title{
+      margin: auto 0px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 400;
     }
+    .single-event__time-from-title{
+      width: 25%;
+    }
+    .single-event__time-to-title{
+      width: 25%;
+    }
+    .single-event__event-title-title{
+      width: 25%;
+    }
+
+    .single-event-button-block{
+      display: flex;
+      width: 25%;
+    }
+
+   .button{
+      width:50%;
+      margin:5px;
+      padding-left: auto;
+   }
+   
   }
 
   .high {
