--- a/src/app/events-main-list/events-main-list.component.css
+++ b/src/app/events-main-list/events-main-list.component.css
@@ -1,13 +1,43 @@
-.event-table-header {
+.main-events-list {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-events-list .options-panel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-events-list .button {
+  margin: 0px 10px;
+  outline: 1px solid red;
+}
+
+.main-events-list .event-table-header {
   border: 1px solid #616161;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  margin-top: 5px;
 }
 
-.single-event {
-  margin-top: 5px;
+.main-events-list .event-table-header .title {
+  width: 25%;
+  text-align: center;
+  font-size: 20px;
+}
+
+.main-events-list .prority-filter-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 80px;
+  outline: 1px solid red;
 }
 /*# sourceMappingURL=events-main-list.component.css.map */
