--- a/src/app/events-main-list/events-main-list.component.scss
+++ b/src/app/events-main-list/events-main-list.component.scss
@@ -1,9 +1,32 @@
-.event-table-header{
-    border: 1px solid #616161;
-    display: flex;
-    justify-content: space-around;
+.main-events-list{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    .options-panel{
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .button {
+        margin: 0px 10px; 
+        outline: 1px solid red;  
+    }
+    .event-table-header{
+        border: 1px solid #616161;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 5px;
+        
+        .title{
+            width: 25%;
+            text-align: center;
+            font-size: 20px;
+        }
+    }
+    .prority-filter-list{
+        display: flex;
+        max-width: 80px;
+        outline: 1px solid red;
+    }
 }
 
-.single-event{
-    margin-top: 5px;
-}
