--- a/src/app/day-shedule/events-list/events-list.component.html
+++ b/src/app/day-shedule/events-list/events-list.component.html
@@ -4,7 +4,7 @@
     <p class="time-from-title title">Time From</p>
     <p class= "time-to-title title">Time To</p>
     <p class= "time-to-title title">Title</p>
-    <p class= "delete-edit-title title"></p>
+    <p class= "delete-edit-title title">Delete<wbr>/Edit</p>
     
 </div>
    
