--- a/src/app/day-shedule/day-shedule-list/day-shedule-list.component.css
+++ b/src/app/day-shedule/day-shedule-list/day-shedule-list.component.css
@@ -1,18 +1,20 @@
-.shedule-date-label {
-  font-size: 30px;
-}
-
 .events-table {
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.events-table .events-list {
-  margin-top: 10px;
+.events-table .events-table__label {
+  font-size: 30px;
 }
 
-.events-table button {
-  margin: 10px;
+.events-table .events-table__button {
+  font-size: 20px;
+  height: 50px;
+  margin: 5px 10px;
+}
+
+.events-table .events-list {
+  margin-top: 10px;
 }
 /*# sourceMappingURL=day-shedule-list.component.css.map */
