--- a/src/app/day-shedule/day-shedule-list/day-shedule-list.component.scss
+++ b/src/app/day-shedule/day-shedule-list/day-shedule-list.component.scss
@@ -1,20 +1,22 @@
-.shedule-date-label{
-    font-size: 30px;
-}
-
 .events-table{
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     
+    .events-table__label{
+        font-size: 30px;
+    }
+
+    .events-table__button{
+        font-size: 20px;
+        height: 50px;
+        margin: 5px 10px;
+    }
     .events-list{
         margin-top:10px;
     }
 
-    button{
-        margin: 10px;
-    }
-
+    
 }
 
 
