--- a/src/app/day-shedule/events-list/events-list.component.css
+++ b/src/app/day-shedule/events-list/events-list.component.css
@@ -5,10 +5,13 @@
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  margin-top: 5px;
 }
 
 .event-table-header .title {
   width: 25%;
-  outline: 1px solid blue;
+  text-align: center;
+  font-size: 20px;
+  text-overflow: clip;
 }
 /*# sourceMappingURL=events-list.component.css.map */
