--- a/src/app/day-shedule/events-list/events-list.component.scss
+++ b/src/app/day-shedule/events-list/events-list.component.scss
@@ -2,9 +2,12 @@
     border: 1px solid #616161;
     display: flex;
     justify-content: space-around;
+    margin-top: 5px;
+    
     .title{
         width: 25%;
-        outline: 1px solid blue;
+        text-align: center;
+        font-size: 20px;
+        text-overflow: clip;
     }
 }
-
