--- a/src/app/day-shedule/single-event/single-event.component.css
+++ b/src/app/day-shedule/single-event/single-event.component.css
@@ -6,7 +6,7 @@
       -ms-flex-pack: start;
           justify-content: flex-start;
   border: 1px solid #616161;
-  height: 40px;
+  min-height: 40px;
   margin-top: 5px;
 }
 
@@ -27,19 +27,25 @@
 
 .single-event .single-event__event-title-title {
   width: 25%;
+  overflow: hidden;
 }
 
 .single-event .single-event-button-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 25%;
 }
 
 .single-event .button {
-  width: 50%;
   margin: 5px;
   padding-left: auto;
+  text-overflow: clip;
+  max-width: 100%;
 }
 
 .high {
