--- a/src/app/events-main-list/events-main-list.component.css
+++ b/src/app/events-main-list/events-main-list.component.css
@@ -8,13 +8,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-height: 50px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .main-events-list .button {
   margin: 0px 10px;
-  outline: 1px solid red;
+  font-size: 20px;
+  height: 50px;
 }
 
 .main-events-list .event-table-header {
@@ -33,11 +35,26 @@
   font-size: 20px;
 }
 
-.main-events-list .prority-filter-list {
+.main-events-list .priority-filter-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   max-width: 80px;
-  outline: 1px solid red;
+}
+
+.main-events-list .priority-filter-list .priority-filter-list__title {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.main-events-list .priority-filter-list .priority-filter-list__list {
+  font-size: 15px;
+  font-weight: 400;
+  margin-left: 5px;
+}
+
+.main-events-list .priority-filter-list .priority-filter-list__option {
+  font-size: 15px;
+  font-weight: 400;
 }
 /*# sourceMappingURL=events-main-list.component.css.map */
