--- a/src/app/main-shedule/day/day.component.html
+++ b/src/app/main-shedule/day/day.component.html
@@ -1,12 +1,13 @@
-<div class="day" hoverDay (click) = "sheduleRouting(dayNumber, currentMonthNumber, currentYear)">
-    <p class="day-number" *ngIf="dayNumber!==''">
+<div class="day" 
+hoverDay (click) = "sheduleRouting(dayNumber, currentMonthNumber, currentYear)"
+*ngIf="dayNumber!==''">
+    <p class="day__number" >
       {{ dayNumber }}
     </p>
     
-    <div class="events-panel">
-      <p class="events-name" *ngIf="dayNumber!==''">Events</p>
-        <div class="events-container">
-        <div  class="event-symbol" *ngFor = "let item of eventsStatusArray">x</div>
+    <div class="day__events-panel">
+        <div class="day__events-container" *ngIf="dayNumber!==''">
+        <div  class="day__events-container-symbol" *ngFor = "let item of eventsStatusArray">x</div>
         </div>
     </div>
 </div>
